--- a/main/style.css
+++ b/main/style.css
@@ -28,17 +28,14 @@ a {
   width: 100%;
   font-family: "Inter", sans-serif;
   color: #000;
-  /* border: 1px solid red; */
 }
 /*header*/
 .header {
-  /* border: 1px solid red; */
   width: 100%;
   top: 0;
   z-index: 1000;
   position: fixed;
   transition: all 0.4s ease;
-  /* background-color: #262931; */
   background: linear-gradient(to right, #1c2e4a, #152238);
 }
 .header-content {
@@ -51,7 +48,6 @@ a {
   margin: 0 auto;
   position: relative;
   transition: all 0.4s ease;
-  /* border: 1px solid brow/n; */
 }
 .header-content:after {
   content: "";
@@ -62,16 +58,13 @@ a {
   border: 0.3px solid hsl(from #3684ad h s l / 0.8);
 }
 .logo-container {
-  /* border: 1px solid red; */
   padding: 20px;
-  /* color: #000; */
   color: #fff;
-}
-.logo-container h1 {
-  font-size: 1.6rem;
+  h1 {
+    font-size: 1.6rem;
+  }
 }
 .nav-container {
-  /* border: 1px solid red; */
   padding: 20px;
 }
 .nav-list-cont {
@@ -79,7 +72,6 @@ a {
   column-gap: 40px;
 }
 .nav-list {
-  /* color: #000; */
   color: #fff;
   font-size: 1.6rem;
   transition: all 0.4s ease;
@@ -99,21 +91,17 @@ a {
   font-family: "Raleway Dots", sans-serif !important;
   color: #ed0807;
 }
-
 .fixed-nav .header {
   position: fixed;
 }
 .home-section {
   margin: 90px auto 0 auto;
-  /* border: 1px solid green; */
   width: 100%;
   height: calc(100vh - 90px);
   color: #f8f8ff;
-  /* background: linear-gradient(to right, #1c2e4a, #152238); */
   background: linear-gradient(to right, #152238, #334154);
 }
 .home-wrapper {
-  /* border: 1px solid red; */
   max-width: 1200px;
   height: 100%;
   margin: 0 auto;
@@ -124,7 +112,6 @@ a {
   column-gap: 30px;
 }
 .h-first-section {
-  /* border: 1px solid green; */
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -140,13 +127,11 @@ a {
   padding: 10px;
   width: 100%;
   color: #f8f8f8;
-  /* border: 1px solid red; */
   span {
     color: #cdff71;
   }
 }
 .h-p {
-  /* border: 1px solid pink; */
   line-height: 1.5;
   width: 100%;
   padding: 10px;
@@ -161,7 +146,6 @@ a {
   font-family: "Raleway Dots", sans-serif;
 }
 .h-second-section {
-  /* border: 1px solid purple; */
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -173,8 +157,6 @@ a {
 }
 
 .dropmenu-container {
-  /* border: 1px solid palegreen; */
-  /* border: 2px solid #5c78fa; */
   border: 2px solid #52b8f7;
   padding: 5px;
   border-radius: 6px;
@@ -232,22 +214,18 @@ a {
   width: 100%;
 }
 .ss-form {
-  /* border: 1px solid yellow; */
   width: 100%;
-  /* padding: 5px; */
   border-radius: 5px;
   max-width: 100%;
   min-width: 300px;
 }
 .about-section {
-  /* border: 1px solid yellow; */
   width: 100%;
   height: 400px;
   color: #f8f8ff;
   background: linear-gradient(to right, #152238, #3684ad);
 }
 .about-wrapper {
-  /* border: 1px solid red; */
   max-width: 1200px;
   height: 100%;
   margin: 0 auto;
@@ -271,7 +249,6 @@ a {
   letter-spacing: 0.3px;
 }
 .about-p-cont {
-  /* border: 2px solid olive; */
   padding: 10px;
   width: calc(100% - 300px);
   text-align: center;
@@ -296,20 +273,17 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* border: 1px solid red; */
 }
 .footer-top p {
   font-size: 1.5rem;
   display: flex;
   justify-content: center;
-
   column-gap: 10px;
   padding: 20px;
   color: #5c78fa;
 }
 .footer-bottom {
   display: flex;
-  /* border: 1px solid palegreen; */
   justify-content: center;
   align-items: center;
   column-gap: 40px;
@@ -331,7 +305,6 @@ a {
 .footer-top p::selection {
   color: #f8f8ff;
 }
-
 .button {
   appearance: none;
   color: #f8f8f8;
@@ -356,7 +329,6 @@ a {
   z-index: 1001;
   opacity: 0;
   pointer-events: none;
-
   transition: opacity 0.4s;
   background: linear-gradient(to right, #475569, #262931);
 }
@@ -386,21 +358,17 @@ a {
   align-items: flex-start;
   flex-direction: column;
 }
-
 .popup h2 {
-  /* color: rgba(255, 194, 204, 0.8); */
   color: #ffddd6;
   font-size: 28px;
   font-weight: 600;
 }
-
 .popup p {
   font-size: 1.6rem;
   margin-top: 15px;
   font-family: "Inter", sans-serif;
   line-height: 1.5;
   letter-spacing: 0.5px;
-  /* color: #8ab4f7; */
   color: #fff4df;
 }
 .popup p:last-of-type {
@@ -414,7 +382,6 @@ a {
   margin-bottom: 15px;
   align-self: center;
   color: #ffa652;
-  /* transform: rotate(15deg); */
   animation: circle 2s ease infinite;
   animation-delay: 3s;
 }
@@ -433,20 +400,13 @@ a {
     transform: translateY(-15px);
   }
 }
-
 .no-scroll {
   overflow-y: hidden;
   touch-action: none;
 }
-
-/*info section css*/
 .info-section {
-  /* border: 1px solid red; */
   width: 100%;
-  /* height: 600px; */
   height: 100%;
-  /* height: max-content; */
-
   font-family: "Inter", sans-serif;
   color: #f8f8f8;
   background: linear-gradient(
@@ -454,12 +414,8 @@ a {
     rgba(55, 133, 174, 0.3),
     rgba(14, 16, 22, 0.5)
   );
-
-  /* overflow: hidden; */
 }
 .img1 {
-  /* width: 900px; */
-  /* height: 500px; */
   height: 100%;
   width: 100%;
 }
@@ -471,7 +427,6 @@ a {
 .info-list {
   max-width: 90%;
   min-width: max-content;
-  /* height: 600px; */
   height: 100%;
   margin: 0 auto;
   display: flex;
@@ -479,69 +434,44 @@ a {
   flex-direction: column;
   align-items: center;
   row-gap: 20px;
-  /* border: 1px solid yellow; */
   border-radius: 10px;
   padding: 30px 0;
 }
 .info-container {
   width: 600px;
   height: 450px;
-  /* height: 100%; */
-
-  /* height: 600px; */
-  /* border: 1px solid blue; */
+  display: block;
   border-radius: 10px;
   overflow: hidden;
   overflow-y: auto;
-  /**/
 }
-
 .info-top {
-  /*as slider*/
-  /* width: 900px; */
   width: 100%;
-
   height: 100%;
-
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.1);
-  /* background: #151725; */
   background: rgba(20, 22, 38, 0.5);
   position: relative;
 }
 .info-top-inner {
   width: 500%;
-  /* display: flex; */
   height: 100%;
   display: flex;
-  /* column-gap: 20px; */
-  /* justify-content: center; */
-  /* align-items: center; */
 }
 .top-inner1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* border: 1px solid red; */
-  /* max-width: max-content; */
   row-gap: 10px;
-  /* max-width: max-content; */
-  /* width: 900px; */
-  /* width: 100%; */
-
-  /* height: 500px; */
-  /* max-width: max-content; */
   width: 100%;
   height: 100%;
-  /* border: 1px solid orange; */
   border-radius: 16px;
   padding: 20px;
 }
 .top-inner1-cont1 {
   display: flex;
-  /* border: 1px solid palegreen; */
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -550,7 +480,6 @@ a {
   font-family: "Raleway Dots", sans-serif;
   h1 {
     font-size: 3rem;
-    /* color: #ff6467; */
     color: #a8d3e6;
   }
   h3 {
@@ -570,40 +499,30 @@ a {
 }
 .top-inner1-cont2 {
   width: 350px;
-  /* max-width: max-content; */
-  /* width: 100%; */
   height: 300px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  /* border: 1px solid goldenrod; */
   padding: 10px;
 }
 .top-inner2 {
-  /* border: 1px solid orange; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* max-width: max-content; */
-  /* width: 900px; */
   padding: 20px;
   border-radius: 16px;
   row-gap: 5px;
-
   width: 100%;
   height: 100%;
 }
-
 .top-inner2-cont1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* border: 1px solid wheat; */
   font-family: "Raleway Dots", sans-serif;
   padding: 8px;
   color: #fff;
-
   p {
     font-size: 2rem;
   }
@@ -616,12 +535,8 @@ a {
   column-gap: 5px;
   align-items: center;
   justify-content: center;
-  /* border: 1px solid saddlebrown; */
-
   i {
     margin-left: 5px;
-    /* color: green; */
-    background-color: yellow;
     border-radius: 50%;
     color: #000;
   }
@@ -631,7 +546,6 @@ a {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  /* border: 1px solid red; */
   padding: 5px;
   row-gap: 5px;
   font-family: "Raleway Dots", sans-serif;
@@ -644,7 +558,6 @@ a {
   column-gap: 5px;
   width: 100%;
   color: #fff;
-  /* border: 1px solid red; */
   padding: 3px;
   p {
     font-size: 2rem;
@@ -653,7 +566,6 @@ a {
     color: #fead21;
   }
 }
-
 .ri-add-circle-fill {
   font-size: 2rem;
   color: #85b7fb;
@@ -667,19 +579,9 @@ a {
   width: 20%;
   transition: 2s;
 }
-
-#radio1:checked ~ .first {
-  margin-left: 0;
-}
-#radio2:checked ~ .first {
-  margin-left: -20%;
-}
-/* input[type="radio"]:checked {
-} */
 .manual-btn {
   border: 2px solid #ccc;
   padding: 5px;
-  /* border-radius: 1000px; */
   cursor: pointer;
   transition: 1s;
   border-radius: 50%;
@@ -691,25 +593,20 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* border: 1px solid slateblue; */
   border-radius: 16px;
 }
-
 .manual-btn:not(:last-child) {
   margin-right: 40px;
 }
 .manual-btn:hover {
   background-color: antiquewhite;
 }
-/*middle*/
 .info-top,
 .info-middle,
 .info-bottom {
   transition: 2s;
 }
-
 .info-middle {
-  /* border: 1px solid steelblue; */
   width: 100%;
   height: 100%;
   border-radius: 10px;
@@ -717,7 +614,6 @@ a {
   position: relative;
   font-family: "Raleway Dots", sans-serif;
   box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.1);
-  /* background: #151725; */
   background: rgba(20, 22, 38, 0.5);
 }
 .info-middle-inner {
@@ -730,16 +626,12 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
   row-gap: 10px;
-  /* border: 1px solid yellow; */
-
   border-radius: 16px;
   padding: 20px;
   color: #fff;
 }
 .m-inner1-dateCont {
-  /* border: 1px solid purple; */
   width: 100%;
   display: flex;
   column-gap: 5px;
@@ -755,7 +647,6 @@ a {
   }
 }
 .m-inner1-timeCont {
-  /* border: 1px solid powderblue; */
   width: 100%;
   display: flex;
   column-gap: 5px;
@@ -772,14 +663,11 @@ a {
 }
 .m-inner1-link {
   font-size: 1.8rem;
-  /* color: #fff; */
   color: #baeeee;
-  /* border: 1px solid pink; */
   text-align: center;
   padding: 5px;
 }
 .m-inner1-pSalesCont {
-  /* border: 1px solid snow; */
   width: 100%;
   font-size: 1.8rem;
   padding: 5px;
@@ -802,15 +690,11 @@ a {
   display: flex;
   border-radius: 16px;
   row-gap: 5px;
-  /* border: 1px solid peru; */
 }
 .m-inner2-cont {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
-  /* border: 1px solid lightcoral; */
-  /* height: 100%; */
   width: 100%;
   border-radius: 16px;
   overflow: hidden;
@@ -820,8 +704,6 @@ a {
   color: #fff;
 }
 .presale-cont {
-  /* border: 1px solid sandybrown; */
-  /* border: 1px solid #5c78fa; */
   border: 1px solid rgba(92, 121, 250, 0.6);
   width: 100%;
   font-size: 1.8rem;
@@ -831,18 +713,15 @@ a {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  /* column-gap: 5px; */
   .provide-name {
     color: #ffbab9;
   }
 }
 .inner2-label {
-  /* border: 1px solid seashell; */
   font-size: 1.8rem;
   padding: 5px;
   width: 100%;
   text-align: center;
-  /* color: #fead21; */
   color: #52b8f7;
 }
 .info-top::before,
@@ -858,16 +737,7 @@ a {
   font-size: 2rem;
   font-family: "remixicon";
 }
-#radio3:checked ~ .first {
-  margin-left: 0;
-}
-#radio4:checked ~ .first {
-  margin-left: -20%;
-}
-
-/*bottom*/
 .info-bottom {
-  /* border: 1px solid steelblue; */
   width: 100%;
   height: 100%;
   border-radius: 10px;
@@ -882,7 +752,6 @@ a {
   display: flex;
 }
 .bottom-inner1 {
-  /* border: 1px solid magenta; */
   border-radius: 16px;
   display: flex;
   flex-direction: column;
@@ -890,10 +759,8 @@ a {
   align-items: center;
   padding: 15px;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
-  /* row-gap: 20px; */
 }
 .bottom-inner2 {
-  /* border: 1px solid salmon; */
   border-radius: 16px;
   display: flex;
   flex-direction: column;
@@ -911,14 +778,12 @@ a {
   max-height: 100%;
   width: 100%;
 }
-
 .bottom-inner1.open .b-inner1-cont,
 .bottom-inner2.open .b-inner2-cont {
   padding-bottom: 10px;
 }
 .b-inner1-cont header,
 .b-inner2-cont header {
-  /* border: 1px solid red; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -928,10 +793,9 @@ a {
   background-color: steelblue;
   transition: all 0.3s linear;
   color: #f8f8f8;
-}
-.b-inner1-cont header i,
-.b-inner2-cont header i {
-  font-size: 1.6rem;
+  i {
+    font-size: 1.6rem;
+  }
 }
 .b-inner1-cont.open header,
 .b-inner2-cont.open header {
@@ -954,9 +818,7 @@ a {
 .b-inner2-cont .information2 .info-ul {
   color: #ccc;
   padding: 0 15px;
-  /* height: 0; */
   transition: all 0.3s linear;
-
   font-size: 1.6rem;
   color: #f8f8f8;
   display: flex;
@@ -984,14 +846,6 @@ a {
   font-size: 2rem;
   font-family: "remixicon";
 }
-#radio5:checked ~ .first {
-  margin-left: 0;
-}
-#radio6:checked ~ .first {
-  margin-left: -20%;
-}
-
-/*tooltip*/
 .tooltip {
   position: absolute;
   content: "";
@@ -1017,7 +871,6 @@ a {
   opacity: 0;
   visibility: hidden;
 }
-
 .tooltip::before {
   position: absolute;
   content: "";
@@ -1027,37 +880,30 @@ a {
   bottom: 100%;
   border-color: transparent transparent #fead21 transparent;
 }
-/*radio classes*/
-
-/*for first input*/
 .info-top-inner input[type="radio"]:first-of-type:checked ~ .first,
 .info-middle-inner input[type="radio"]:first-of-type:checked ~ .first,
 .info-bottom-inner input[type="radio"]:first-of-type:checked ~ .first {
   margin-left: 0;
 }
-
-/* For the second input in each container */
 .info-top-inner input[type="radio"]:last-of-type:checked ~ .first,
 .info-middle-inner input[type="radio"]:last-of-type:checked ~ .first,
 .info-bottom-inner input[type="radio"]:last-of-type:checked ~ .first {
   margin-left: -20%;
 }
+
 /*Media Queries/Responsiveness*/
 @media screen and (max-width: 1023px) {
   .home-wrapper {
-    /* border: 1px solid red; */
     justify-content: space-evenly;
     flex-direction: column;
     max-width: 100%;
   }
   .h-first-section {
-    /* border: 1px solid green; */
     row-gap: 20px;
     max-width: none;
     width: 100%;
   }
   .h-second-section {
-    /* border: 1px solid purple; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1067,20 +913,17 @@ a {
     padding: 30px;
     flex: none;
   }
-
   .h-heading {
     font-size: 4.5rem;
     padding: 10px;
     width: 100%;
     color: #f8f8f8;
-    /* border: 1px solid red; */
     text-align: center;
     span {
       color: #cdff71;
     }
   }
   .h-p {
-    /* border: 1px solid pink; */
     text-align: center;
     line-height: 1.5;
     width: 100%;
@@ -1107,29 +950,23 @@ a {
     align-items: center;
     text-align: center;
   }
-  /*Info section*/
   .info-list {
     min-width: 100%;
     max-width: 100%;
     height: 100%;
-
-    /* border: 1px solid yellow; */
   }
   .info-container {
     height: 450px;
     width: 100%;
   }
-  /*ok*/
   .info-top-inner {
     width: 500%;
     height: 100%;
     display: flex;
   }
-
   .top-inner1-cont1 {
     h1 {
       font-size: 2.1rem;
-
       color: #a8d3e6;
     }
     h3 {
@@ -1141,29 +978,18 @@ a {
       color: #f8f8ff;
     }
   }
-
   .manual-nav {
     width: 100%;
-    /* border: 1px solid lightblue; */
   }
-  /*ok2*/
-  .info-Btn {
+  .info-Btn,
+  .form-input,
+  .about-heading,
+  .dropMenu-label {
     font-size: 1.6rem;
-  }
-
-  .form-input {
-    font-size: 1.6rem;
-  }
-
-  .about-heading {
-    font-size: 2.1rem;
   }
   .ri-error-warning-line {
     font-size: 3.5rem;
     color: #ed0807;
-  }
-  .dropMenu-label {
-    font-size: 1.6rem;
   }
   .h-heading {
     font-size: 2.5rem;
@@ -1171,20 +997,14 @@ a {
 }
 @media screen and (max-width: 495px) {
   .b-inner1-cont .information,
-  .b-inner2-cont .information {
-    color: #f8f8f8;
-  }
-
+  .b-inner2-cont .information,
   .b-inner1-cont .information2 .info-ul,
   .b-inner2-cont .information2 .info-ul {
     color: #f8f8f8;
   }
-
   .b-inner1-cont header,
   .b-inner2-cont header {
-    /* background-color: steelblue; */
     background-color: #121212;
-
     color: #e7f0fe;
   }
 }
